added test classes and edit on classes